Fix mobile horizontal scroll issue (shorten hr)

--- a/resources/web/css/custom.css
+++ b/resources/web/css/custom.css
@@ -66,8 +66,6 @@ hr.top-line {
     border-top: 1px solid var(--font-lighter-color);
     margin: 13px 0;
     padding: 0;
-    width: 300%;
-    margin-left: -100%;
 }
 
 section {
